--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Fleetsy</title>
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/style.css" rel="stylesheet">
-</head>
+<div th:replace="fragments/head :: head"></div>
 <body>
+    <div th:replace="fragments/header :: header"></div>
     <main role="main" class="container">
         <div class="jumbotron">
             <h1>Welcome to Fleetsy</h1>
@@ -15,14 +11,10 @@
         <div>
             <p>Select an organization to manage:</p>
             <ul>
-                <li th:each="org : ${orgs}"><span th:text="${org.name}">Organization Name</span></li>
+                <li th:each="org : ${orgs}"><a th:href="@{/fleet(orgId=${org.id})}" href="#"><span th:text="${org.name}">Organization Name</span></a></li>
             </ul>
         </div>
     </main>
-    <footer class="footer mt-auto py-3">
-        <div class="container">
-            <span class="text-muted">Demonhacks 2020</span>
-        </div>
-    </footer>
+    <div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
