--- a/src/main/resources/templates/fleet.html
+++ b/src/main/resources/templates/fleet.html
@@ -9,6 +9,20 @@
             <p class="lead">Fleetsy can help you manage your organization's fleet of vehicles.</p>
         </div>
         <div>
+		    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+		      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+		        <ul class="navbar-nav mr-auto">
+		          <li class="nav-item active">
+		            <a class="nav-link" th:href="@{/}" href="#">Home</a>
+		          </li>
+		          <li class="nav-item">
+		            <a class="nav-link" href="#">Vehicles</a>
+		          </li>
+		        </ul>
+		      </div>
+		    </nav>
+        </div>
+        <div>
             <p>This is your fleet:</p>
             <div class="table-responsive">
 	            <table class="table table-striped table-hover">
@@ -27,7 +41,7 @@
 	                        <td th:text="${v.color}">Vehicle Color</td>
 	                        <td th:text="${v.make}">Vehicle Make</td>
 	                        <td th:text="${v.model}">Vehicle Model</td>
-	                        <td th:text="${v.mileage}">Vehicle Mileage</td>
+	                        <td th:text="${#numbers.formatInteger(v.mileage, 1, 'COMMA')}" class="text-right">Vehicle Mileage</td>
 	                    </tr>
 	                </tbody>
 	            </table>
