--- a/src/main/resources/templates/fleet.html
+++ b/src/main/resources/templates/fleet.html
@@ -5,8 +5,8 @@
     <div th:replace="fragments/header :: header"></div>
     <main role="main" class="container">
         <div class="jumbotron">
-            <h1>Welcome to Fleetsy</h1>
-            <p class="lead">Fleetsy can help you manage your organization's fleet of vehicles.</p>
+            <h1>Your Fleet</h1>
+            <p class="lead">The vehicles comprising your fleet are listed below.</p>
         </div>
         <div>
 		    <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -18,12 +18,14 @@
 		          <li class="nav-item">
 		            <a class="nav-link" href="#">Vehicles</a>
 		          </li>
+                  <li class="nav-item">
+                    <a class="nav-link" th:href="@{/service-providers}" href="#">Service Providers</a>
+                  </li>
 		        </ul>
 		      </div>
 		    </nav>
         </div>
         <div>
-            <p>This is your fleet:</p>
             <div class="table-responsive">
 	            <table class="table table-striped table-hover">
 	                <thead class="thead-dark">
