--- a/src/main/resources/templates/vehicleServiceHistory.html
+++ b/src/main/resources/templates/vehicleServiceHistory.html
@@ -5,8 +5,8 @@
     <div th:replace="fragments/header :: header"></div>
     <main role="main" class="container">
         <div class="jumbotron">
-            <h1>Service Providers</h1>
-            <p class="lead">This is a listing of companies that can provide automotive services to vehicles in your fleet.</p>
+            <h1>Vehicle Service History</h1>
+            <p class="lead">The complete service history for vehicle VIN <b><span th:text="${vehicle.vin}"></span></b> is listed below.</p>
         </div>
         <div>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -18,7 +18,7 @@
                   <li class="nav-item">
                     <a class="nav-link" th:href="@{/fleet}" href="#">Vehicles</a>
                   </li>
-                  <li class="nav-item active">
+                  <li class="nav-item">
                     <a class="nav-link" th:href="@{/service-providers}" href="#">Service Providers</a>
                   </li>
                 </ul>
@@ -30,16 +30,20 @@
                 <table class="table table-striped table-hover">
                     <thead class="thead-dark">
                         <tr>
-                            <th scope="col">Name</th>
-                            <th scope="col">Phone Number</th>
-                            <th scope="col">Location</th>
+                            <th scope="col">Service Date</th>
+                            <th scope="col">Mileage</th>
+                            <th scope="col">Service</th>
+                            <th scope="col">Service Provider</th>
+                            <th scope="col">Cost</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr th:each="sp : ${serviceProviders}">
-                            <td th:text="${sp.name}">Name</td>
-                            <td th:text="${sp.phone}">Phone Number</td>
-                            <td><a target="_blank" th:href="@{'https://www.google.com/maps/place/'+${sp.locationSearchFragment}}" href="#"><span th:text="${sp.location}">Location</span></a></td>
+                        <tr th:each="sh : ${serviceHistories}">
+                            <td th:text="${#dates.format(sh.convertedServiceDate,'yyyy-MMMM-dd')}">Vehicle Service Date</td>
+                            <td th:text="${#numbers.formatInteger(sh.mileage, 1, 'COMMA')}" class="text-right">Vehicle Mileage</td>
+                            <td th:text="${sh.serviceDesc}">Service Description</td>
+                            <td th:text="TBD">Service Provider</td>
+                            <td th:text="${#numbers.formatCurrency(sh.cost)}" class="text-right">Service Cost</td>
                         </tr>
                     </tbody>
                 </table>
