add conditional render for nav link

--- a/src/main/resources/templates/serviceProviders.html
+++ b/src/main/resources/templates/serviceProviders.html
@@ -15,7 +15,7 @@
                   <li class="nav-item">
                     <a class="nav-link" th:href="@{/}" href="#">Home</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item" th:if="${renderVehiclesLink}">
                     <a class="nav-link" th:href="@{/fleet}" href="#">Vehicles</a>
                   </li>
                   <li class="nav-item active">
