--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,7 +1,7 @@
 <div th:fragment="footer" xmlns:th="http://www/w3/org/1999/xhtml">
     <footer class="footer mt-auto py-3">
         <div class="container">
-            <span class="text-muted">Fleetsy for Demonhacks 2021</span>
+            <span class="text-muted" th:text="${appInfo.title + ' ©2020, by Rory Dickinson for ' + appInfo.hackathon + '.'}"></span>
         </div>
     </footer>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
